--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
+
+<!DOCTYPE html>
+<html>
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="Area, with JavaScript" />
+    <meta name="keywords" content="immaculata, ics2o" />
+    <meta name="author" content="Abdul" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./fav_index/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/favicon-16x16.png" />
+    <link rel="manifest" href="./fav_index/site.webmanifest" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Salary Program</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <script src="./js/script.js"></script>
+    <h1>Salary Program, with a JS File</h1>
+    <p>
+      <h3>Please Enter Your Job Information</h3>
+      <form action="javascript:hoursWorked()">
+        <label for="hours">Number of Hours Worked</label>
+        <input type="text" id="hours-worked" placeholder="Hours"><br><br>
+        <label for="rate">Hourly Rate $</label>
+        <input type="number" id="hourly-rate" placeholder="Rate"><br><br>
+        <input type="submit" value="Pay">
+      </form>
+    </p>
+    <div id="gross-pay"></div>
+    <div id="net-pay"></div>
+    <div id="gov-pay"></div>
   </body>
 </html>
