--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label for="hours">Number of Hours Worked</label>
         <input type="text" id="hours-worked" placeholder="Hours"><br><br>
         <label for="rate">Hourly Rate $</label>
-        <input type="number" id="hourly-rate" placeholder="Rate"><br><br>
+        <input type="text" id="hourly-rate" placeholder="Rate"><br><br>
         <input type="submit" value="Pay">
       </form>
     </p>
